--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "googleapis": "^118.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.2.3",
     "concurrently": "^8.0.1",
+    "node-fetch": "^2.6.6",
     "nodemon": "^2.0.22",
     "typescript": "^5.0.4"
   }
