--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "googleapis": "^118.0.0"
+    "googleapis": "^118.0.0",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.2.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
