--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+    "test": "jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -20,12 +21,17 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.3",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.2.3",
     "concurrently": "^8.0.1",
+    "expect": "^29.6.1",
     "google-auth-library": "^8.8.0",
+    "jest": "^29.6.1",
     "node-fetch": "^2.6.6",
     "nodemon": "^1.14.9",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.0.4"
   }
 }
